jipsy-tests/src/test/resources/valid/ProvidesClassTestClass.java
import org.kordamp.jipsy.ServiceProviderFor;

@ServiceProviderFor(Object.class)
public class ProvidesClassTestClass {
	
}
